--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube Premium</title>
+    <link rel="shortcut icon" href="img/Icon_Youtube_Titulo.png" />
   </head>
   <body>
     <div id="Div_Para_Referencia_E_Criacao_React"></div>
